force-app/main/default/objects/BLN_APICalloutPublisher__e/BLN_APICalloutPublisher__e.object-meta.xml
<CustomObject>
    <description>Used to publish the event in case of any api callout to an external system</description>
    <label>API Callout Publisher</label>
    <pluralLabel>API Callout Publishers</pluralLabel>
</CustomObject>