force-app/main/default/objects/BLN_APICalloutPublisher__e/fields/BLN_APIName__c.field-meta.xml
<CustomField>
    <fullName>BLN_APIName__c</fullName>
    <description>This field contains API sync value</description>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>