force-app/main/default/objects/BLN_APICalloutPublisher__e/fields/BLN_DMLEventType__c.field-meta.xml
<CustomField>
    <fullName>BLN_DMLEventType__c</fullName>
    <description>This field contains Event type based on insert or update operation.</description>
    <label>DML Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>