force-app/main/default/objects/BLN_APICalloutPublisher__e/fields/BLN_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>BLN_ObjectName__c</fullName>
    <description>This field contains object name</description>
    <label>Object Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>