force-app/main/default/objects/BLN_APICalloutPublisher__e/fields/BLN_RecordId__c.field-meta.xml
<CustomField>
    <fullName>BLN_RecordId__c</fullName>
    <description>This field contains record Id.</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>